# provena

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  README.md
.claude/: settings.json
.github/: copilot-instructions.md
.github/workflows/: docs-pages.yml
docs/: book.toml
docs/src/: SUMMARY.md  contributing.md  introduction.md
docs/src/adrs/: 0001-repository-boundaries.md  0002-public-platform-scope.md  0003-meta-repo-purpose.md  0004-ledger-as-authorization-state-store.md  0005-artifact-integrity-and-hydration-model.md  README.md
docs/src/architecture/: artifact-integrity.md  authorization-model.md  capability-model.md  crates.md  migration-model.md  overview.md  plugin-model.md
mdbook-strip-frontmatter/: Cargo.toml
mdbook-strip-frontmatter/src/: main.rs
provena-api/: Cargo.toml
provena-api/src/: lib.rs
provena-core/: Cargo.toml
provena-core/src/: lib.rs
provena-kernel/: Cargo.toml
provena-kernel/src/: lib.rs
provena-ledger/: Cargo.toml
provena-ledger/src/: lib.rs
provena-sdk/: Cargo.toml
provena-sdk/src/: lib.rs
prv/: Cargo.toml
prv/src/: main.rs
