[workspace]
members = [
  "provena-core",
  "provena-sdk",
  "provena-kernel",
  "provena-ledger",
  "provena-api",
  "prv",
  "mdbook-strip-frontmatter",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Matthew Ryrie"]
license = "Apache-2.0"
repository = "https://github.com/provenancai/provena"

[workspace.dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# HTTP
axum = { version = "0.7" }
tower = { version = "0.4" }
tower-http = { version = "0.5", features = ["trace"] }
hyper = { version = "1" }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1" }
toml = { version = "0.8" }

# Database
sqlx = { version = "0.7", features = [
  "runtime-tokio",
  "postgres",
  "uuid",
  "chrono",
  "migrate",
] }

# Error handling
thiserror = { version = "1" }
anyhow = { version = "1" }

# Utilities
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
tracing = { version = "0.1" }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
reqwest = { version = "0.11", features = ["json"] }
